Changelog
=========

6.6-dev - (unreleased)
----------------------
* Cleanup: Remove "eea.related_multimedia" viewlet
  [voineali refs #9552]

6.5 - (2013-04-17)
------------------
* Bug fix: fixed HISTORY.txt RST markup
  [ghicaale refs #14321]

6.4 - (2013-04-17)
------------------
* Bug fix: Fixed full screen mode for interactive maps
  [ichimdav #14215]
* Bug fix: Fixed wrong tal statement in translation template
  [prospchr refs #14270]

6.3 - (2013-03-15)
------------------
* Bug fix: Added a try except clause when trying to retrieve theme title for
  sameTypeByTheme to avoid future LookupError exceptions
  [ichimdav #14108]
* Bug fix: check if themes is available to correct a potential bug when calling
  sameTypeByTheme
  [ichimdav #14109]
* Change: Confimation and action emails are now sent only in english.
  [prospchr]
* Better display concatenated resources under @@reorder_css
  [ghicaale refs #14067]

6.2 - (2013-02-27)
------------------
* Bug fix: check with getattr non_deprecatedthemes since ExternalDataSpec
  Theme object doesn't have that property
  [ichimdav #13986]
* Bug fix: re added moreLink logic for document_relateditems.pt
  [ichimdav #13994]
* Bug fix: Keep consistency in AutoRelations adapter returning values
  [voineali]
* Bug fix: Change the translation domain from eea to eea.notranslation on
  gis_view.pt.
  [prospchr refs #13770]

6.1 - (2013-02-25)
------------------
* Change: optimized smartfolder.py logic responsible for latest events popup
  from cross_site_top
  [ichimdav #13771]
* Change: optimized sameTypeByTheme which is responsible for the latest
  addition portlet logic
  [ichimdav #13771]
* Change: optimized autoContext relations which is called on video_popup_view
  [ichimdav #13771]
* Bug fix: getattr isCanonical for the relations canonical check to avoid
  portal_relations error
  [ichimdav]
* Change: disabled eea_keywords macro setting for subject since we already
  provide a different macro with the eea.tags widget