@@ -3,6 +3,9 @@ Changelog
 
 6.6-dev - (unreleased)
 ----------------------
+* Upgrade step: Within "Plone > Site setup > Add-ons" click on
+  upgrade button available for EEA Content Types
+  [voineali refs #9552]
 * Cleanup: Remove "eea.related_multimedia" viewlet
   [voineali refs #9552]
 
